--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "react-scroll": "^1.7.5",
     "react-scroll-parallax": "^1.1.1"
   },
   "scripts": {
