--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "animate.css": "^3.5.2",
     "cors": "^2.8.4",
+    "hoek": "^5.0.3",
     "react": "^16.2.0",
     "react-animate-on-scroll": "^1.6.0",
     "react-dom": "^16.2.0",
