--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "dependencies": {
     "animate.css": "^3.6.1",
+    "axios": "^0.18.0",
     "cors": "^2.8.4",
+    "dotenv": "^5.0.1",
     "react": "^16.2.0",
     "react-animate-on-scroll": "^1.6.2",
+    "react-async-script": "^0.9.1",
     "react-dom": "^16.2.0",
+    "react-google-recaptcha": "^0.11.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
@@ -19,5 +23,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "proxy": "http://localhost:3333"
 }
